@@ -1,5 +1,13 @@
 2007-06-21  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
 
+	* src/gstsphinxsink.c: (gst_sphinx_sink_set_fsg):
+	* src/spi-listener.c: (control_spi_listener_dump_actions_list),
+	(control_spi_listener_build_actions_list):
+	
+	Ifdefs for DEBUG output
+
+2007-06-21  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
+
 	* src/spi-listener.c: (is_worth_searching),
 	(control_spi_listener_build_actions_list),
 	(control_spi_listener_process_event),
